[package]
name = "egui_storybook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.27.0"
eframe = "0.27.0"
quote = "1.0.35"
proc-macro2 = "1.0.78"
tempdir = "0.3.7"
askama = "0.12.1"
env_logger = "0.11.2"
anyhow = "1.0.80"

[[escaper]]
extensions = ["rs"]
